--- a/app/src/main/res/layout/information_file_layout.xml
+++ b/app/src/main/res/layout/information_file_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     tools:orientation="vertical"
@@ -15,7 +15,8 @@
 
     <ImageView
         android:id="@+id/file"
-        android:visibility="gone"
+        android:maxHeight="@dimen/dp_180"
+        android:adjustViewBounds="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
@@ -23,5 +24,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
-        android:text="@string/wallet_id_photo_positive" />
+        android:text="@string/wallet_upload_file" />
 </merge>
