--- a/app/src/main/res/layout/wallet_activity_about_we.xml
+++ b/app/src/main/res/layout/wallet_activity_about_we.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wallet_web_site"
-            android:textColor="@color/wallet_blue" />
+            android:textColor="@color/wallet_main_yellow_color" />
     </LinearLayout>
 
 <!--    <LinearLayout-->
