--- a/app/src/main/res/layout/wallet_manage_item_view.xml
+++ b/app/src/main/res/layout/wallet_manage_item_view.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="78dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="15dp"
@@ -42,7 +42,7 @@
 
         <TextView
             android:id="@+id/wallet_address"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="15dp"
@@ -51,6 +51,7 @@
             android:text="0x14o37492738624924hfsd727624"
             android:textColor="@color/wallet_text_deep_gray_color"
             android:textSize="@dimen/font_sp_14"
+            app:layout_constraintRight_toLeftOf="@id/upgrade_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/wallet_name"
             app:layout_constraintVertical_bias="0.0" />
