--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -422,5 +422,6 @@
     <string name="assets_information">资产证明</string>
     <string name="phone_area_id">区号</string>
     <string name="wallet_upload_finish">上传完成</string>
+    <string name="wallet_loading">正在加载...</string>
 
 </resources>
