--- a/app/src/main/res/layout/wallet_activity_languages.xml
+++ b/app/src/main/res/layout/wallet_activity_languages.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/wallet_white"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -10,7 +11,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
-        android:layout_marginLeft="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
