--- a/app/src/main/res/layout/wallet_identity_bind_dialog_view.xml
+++ b/app/src/main/res/layout/wallet_identity_bind_dialog_view.xml
@@ -24,7 +24,7 @@
         android:id="@+id/address"
         app:layout_constraintTop_toBottomOf="@id/message"
         android:textSize="12sp"
-        android:drawableRight="@mipmap/wallet_copy_blue"
+        android:drawableRight="@mipmap/wallet_address_copy"
         android:textColor="@color/wallet_text_grey"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="25dp"
