--- a/app/src/main/res/layout/wallet_main_top_title_view.xml
+++ b/app/src/main/res/layout/wallet_main_top_title_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_top_title_bg"
-    android:layout_height="@dimen/dp_64"
+    android:layout_height="74dp"
     android:background="@mipmap/wallet_main_top_title_bg"
     android:orientation="vertical">
 
@@ -20,6 +20,7 @@
     <TextView
         android:id="@+id/title"
         android:text="DEX"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="@dimen/dp_10"
