--- a/app/src/main/res/layout/wallet_idhub_message_item.xml
+++ b/app/src/main/res/layout/wallet_idhub_message_item.xml
@@ -4,17 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@mipmap/wallet_shadow_bg"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginTop="10dp"
     tools:context=".setting.message.transaction.TransactionMessageFragment">
 
     <TextView
         android:id="@+id/message_type"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12sp"
-        android:layout_marginTop="15sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:singleLine="true"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="16sp"
+        android:textColor="@color/wallet_main_yellow_color"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:typeface="serif"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/time"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,9 +30,11 @@
         android:id="@+id/address_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="serif"
+        android:textStyle="bold"
         android:layout_marginTop="10dp"
-        android:background="@drawable/wallet_text_background_grey"
-        android:padding="5dp"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
         android:text="@string/wallet_wallet_address"
         app:layout_constraintLeft_toLeftOf="@id/message_type"
         app:layout_constraintTop_toBottomOf="@id/message_type" />
@@ -36,6 +44,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
+        android:layout_marginTop="10dp"
         android:ellipsize="middle"
         android:singleLine="true"
         app:layout_constraintLeft_toLeftOf="@id/address_name"
@@ -48,8 +59,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/wallet_text_background_grey"
-        android:padding="5dp"
+        android:typeface="serif"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
         android:text="@string/wallet_default_address"
         app:layout_constraintLeft_toLeftOf="@id/message_type"
         app:layout_constraintTop_toBottomOf="@id/address" />
@@ -59,6 +72,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
+        android:layout_marginTop="10dp"
         android:ellipsize="middle"
         android:singleLine="true"
         app:layout_constraintLeft_toLeftOf="@id/message_type"
@@ -69,9 +85,11 @@
         android:id="@+id/recover_address_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:typeface="serif"
         android:layout_marginTop="10dp"
-        android:background="@drawable/wallet_text_background_grey"
-        android:padding="5dp"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
         android:text="@string/wallet_recovery_address"
         app:layout_constraintLeft_toLeftOf="@id/message_type"
         app:layout_constraintTop_toBottomOf="@id/default_address" />
@@ -82,6 +100,9 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:ellipsize="middle"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
+        android:layout_marginTop="10dp"
         android:singleLine="true"
         app:layout_constraintLeft_toLeftOf="@id/message_type"
         app:layout_constraintTop_toBottomOf="@id/recover_address_name"
@@ -91,9 +112,11 @@
         android:id="@+id/ein_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:typeface="serif"
         android:layout_marginTop="10dp"
-        android:background="@drawable/wallet_text_background_grey"
-        android:padding="5dp"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
         android:text="@string/wallet_ein"
         app:layout_constraintLeft_toLeftOf="@id/message_type"
         app:layout_constraintTop_toBottomOf="@id/recover_address" />
@@ -104,6 +127,9 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:ellipsize="middle"
+        android:textSize="16sp"
+        android:textColor="@color/wallet_text_black"
+        android:layout_marginTop="10dp"
         android:singleLine="true"
         app:layout_constraintLeft_toLeftOf="@id/message_type"
         app:layout_constraintTop_toBottomOf="@id/ein_name"
@@ -120,10 +146,4 @@
         app:layout_constraintTop_toTopOf="@id/message_type"
         tools:text="2019/08/30 17:08" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/wallet_line_gray_deep"
-        app:layout_constraintTop_toBottomOf="@id/ein" />
 </com.idhub.wallet.setting.message.idhub.IdHubMessageItemView>
