--- a/app/src/main/res/layout/wallet_node_setting_item.xml
+++ b/app/src/main/res/layout/wallet_node_setting_item.xml
@@ -15,11 +15,12 @@
         android:id="@+id/node_path"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_16"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+        android:paddingTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:paddingBottom="7dp"
         android:textColor="@color/wallet_text_black"
         android:textSize="16sp"
+        android:layout_marginRight="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/node_select_image"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +30,7 @@
         android:id="@+id/node_select_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="5dp"
         android:src="@mipmap/wallet_node_select"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
