--- a/app/src/main/res/layout/wallet_activity_more_transaction_message.xml
+++ b/app/src/main/res/layout/wallet_activity_more_transaction_message.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,55 +7,64 @@
     android:orientation="vertical"
     tools:context=".setting.message.moretransaction.MoreTransactionMessageActivity">
 
-
-    <include
-        android:id="@+id/title"
-        layout="@layout/wallet_common_title_layout"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_address"
-        android:layout_width="200dp"
-        android:layout_gravity="center_horizontal"
-        tools:text="0xsjagkshd"
-        android:textColor="@color/wallet_blue_text"
-        android:padding="5dp"
-        android:textSize="16sp"
-        android:ellipsize="middle"
-        android:singleLine="true"
-        android:drawableRight="@mipmap/wallet_arrow_down"
-        android:gravity="center"
-        android:layout_height="wrap_content" />
-
-    <View
-        android:background="@color/wallet_line_gray"
-        android:layout_width="match_parent"
-        android:layout_height="1dp" />
-
-    <com.idhub.wallet.common.tablayout.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="6dp"
-        app:tabRippleColor="@android:color/transparent"
-        app:wallet_tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
-        app:wallet_tabSelectedTextColor="@color/wallet_blue"
-        app:wallet_tabTextColor="@color/wallet_text_grey"
-        app:wallet_tabTextSize="14sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/wallet_line_gray" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <include
+            android:id="@+id/title"
+            layout="@layout/wallet_common_title_layout"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:drawableRight="@mipmap/wallet_down_arrow"
+            android:ellipsize="middle"
+            android:gravity="center"
+            android:padding="5dp"
+            android:singleLine="true"
+            android:textColor="@color/wallet_main_yellow_color"
+            android:textSize="16sp"
+            tools:text="0xsjagkshd" />
+
+
+        <com.idhub.wallet.common.tablayout.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="6dp"
+            app:tabRippleColor="@android:color/transparent"
+            app:wallet_tabSelectedTextColor="@color/wallet_main_yellow_color"
+            app:wallet_tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+            app:wallet_tabTextColor="@color/wallet_color_A2A2A2"
+            app:wallet_tabTextSize="14sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/wallet_line_gray" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <include
+        android:id="@+id/loading_and_error"
+        layout="@layout/wallet_common_loading_and_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+</androidx.constraintlayout.widget.ConstraintLayout>
