--- a/app/src/main/res/layout/wallet_activity_transaction_detail.xml
+++ b/app/src/main/res/layout/wallet_activity_transaction_detail.xml
@@ -9,200 +9,237 @@
 
     <ScrollView
         android:layout_width="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintBottom_toTopOf="@id/tv_detail"
-        android:layout_marginBottom="20dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/wallet_background_white"
-        android:layout_height="0dp">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@id/tv_detail"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/wallet_blue_text"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/time"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="ETH" />
-
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:textColor="@color/wallet_text_black"
-            app:layout_constraintBottom_toBottomOf="@id/name"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/name"
-            tools:text="2019-08-09" />
-
-        <TextView
-            android:id="@+id/tv_from"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/wallet_text_background_grey"
-            android:padding="5dp"
-            android:text="From"
-            android:textColor="@color/wallet_text_black"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/time" />
-
-        <TextView
-            android:id="@+id/tv_from_address"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintLeft_toLeftOf="@id/tv_from"
-            app:layout_constraintTop_toBottomOf="@id/tv_from"
-            tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95" />
-
-        <TextView
-            android:id="@+id/tv_to"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/wallet_text_background_grey"
-            android:padding="5dp"
-            android:text="To"
-            android:textColor="@color/wallet_text_black"
-            app:layout_constraintLeft_toLeftOf="@id/tv_from_address"
-            app:layout_constraintTop_toBottomOf="@id/tv_from_address" />
-
-        <TextView
-            android:id="@+id/tv_to_address"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintLeft_toLeftOf="@id/tv_to"
-            app:layout_constraintTop_toBottomOf="@id/tv_to"
-            tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95" />
-
-        <TextView
-            android:id="@+id/contract_address_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="CONTRACT ADDRESS"
-            android:textColor="@color/wallet_text_black"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/line" />
-
-        <TextView
-            android:id="@+id/contract_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/contract_address_name"
-            tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95" />
-
-        <TextView
-            android:id="@+id/gas_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="GAS"
-            android:textColor="@color/wallet_text_black"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/contract_address" />
-
-        <TextView
-            android:id="@+id/gas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/gas_name"
-            tools:text="0.0001" />
-
-        <TextView
-            android:id="@+id/gas_price_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="GAS PRICE"
-            android:textColor="@color/wallet_text_black"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/gas" />
-
-        <TextView
-            android:id="@+id/gas_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/gas_price_name"
-            tools:text="0.0001" />
-
-        <TextView
-            android:id="@+id/gas_used_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="GAS USED"
-            android:textColor="@color/wallet_text_black"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/gas_price" />
-
-        <TextView
-            android:id="@+id/gas_used"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/gas_used_name"
-            tools:text="0.0001" />
-        <TextView
-            android:id="@+id/value_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="VALUE"
-            android:textSize="18sp"
-            android:textColor="@color/wallet_blue_text"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/gas_used" />
-
-        <TextView
-            android:id="@+id/value"
-            android:layout_width="wrap_content"
-            android:textSize="16sp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textColor="@color/wallet_blue_text"
-            app:layout_constraintLeft_toLeftOf="@id/name"
-            app:layout_constraintTop_toBottomOf="@id/value_name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="10dp"
-            tools:text="0.0001" />
-
-        <View
-            android:id="@+id/line"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/wallet_line_gray_deep"
-            app:layout_constraintTop_toBottomOf="@id/tv_to_address" />
+            android:background="@mipmap/wallet_shadow_bg"
+            android:layout_height="wrap_content">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="7dp"
+                android:layout_marginTop="7dp"
+                android:textColor="@color/wallet_main_yellow_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:typeface="serif"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="ETH" />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:textSize="16sp"
+                android:textColor="@color/wallet_text_black"
+                app:layout_constraintLeft_toLeftOf="@id/tv_from"
+                app:layout_constraintBottom_toBottomOf="@id/name"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/name"
+                tools:text="2019-08-09" />
+
+            <TextView
+                android:id="@+id/tv_from"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="From"
+                android:textSize="@dimen/font_sp_16"
+                android:textStyle="bold"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/time" />
+
+            <TextView
+                android:id="@+id/tv_from_address"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="@dimen/font_sp_12"
+                app:layout_constraintLeft_toLeftOf="@id/tv_from"
+                app:layout_constraintTop_toBottomOf="@id/tv_from"
+                tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95" />
+
+            <TextView
+                android:id="@+id/tv_to"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textSize="@dimen/font_sp_16"
+                android:textStyle="bold"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                android:text="To"
+                app:layout_constraintLeft_toLeftOf="@id/tv_from_address"
+                app:layout_constraintTop_toBottomOf="@id/tv_from_address" />
+
+            <TextView
+                android:id="@+id/tv_to_address"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="@dimen/font_sp_12"
+                app:layout_constraintLeft_toLeftOf="@id/tv_to"
+                app:layout_constraintTop_toBottomOf="@id/tv_to"
+                tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95" />
+
+            <TextView
+                android:id="@+id/contract_address_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/font_sp_16"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/dp_15"
+                android:typeface="serif"
+                android:text="CONTRACT ADDRESS"
+                android:textColor="@color/wallet_text_black"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/line" />
+
+            <TextView
+                android:id="@+id/contract_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="@dimen/font_sp_12"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/contract_address_name"
+                tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95" />
+
+            <TextView
+                android:id="@+id/gas_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="GAS"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="@dimen/font_sp_16"
+                android:textStyle="bold"
+                android:typeface="serif"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/contract_address" />
+
+            <TextView
+                android:id="@+id/gas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="@dimen/font_sp_16"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/gas_name"
+                tools:text="0.0001" />
+
+            <TextView
+                android:id="@+id/gas_price_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textSize="@dimen/font_sp_16"
+                android:typeface="serif"
+                android:text="GAS PRICE"
+                android:textColor="@color/wallet_text_black"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/gas" />
+
+            <TextView
+                android:id="@+id/gas_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="@dimen/font_sp_16"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/gas_price_name"
+                tools:text="0.0001" />
+
+            <TextView
+                android:id="@+id/gas_used_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:textSize="@dimen/font_sp_16"
+                android:typeface="serif"
+                android:text="GAS USED"
+                android:textColor="@color/wallet_text_black"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/gas_price" />
+
+            <TextView
+                android:id="@+id/gas_used"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:typeface="serif"
+                android:textColor="@color/wallet_text_black"
+                android:textSize="@dimen/font_sp_16"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/gas_used_name"
+                tools:text="0.0001" />
+
+            <TextView
+                android:id="@+id/value_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="VALUE"
+                android:textColor="@color/wallet_main_yellow_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:typeface="serif"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/gas_used" />
+
+            <TextView
+                android:id="@+id/value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/wallet_main_yellow_color"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:typeface="serif"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/name"
+                app:layout_constraintTop_toBottomOf="@id/value_name"
+                tools:text="0.0001" />
+
+            <View
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/wallet_line_gray_deep"
+                app:layout_constraintTop_toBottomOf="@id/tv_to_address" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
     <include
