--- a/app/src/main/res/layout/wallet_fragment_dialog_input_gas.xml
+++ b/app/src/main/res/layout/wallet_fragment_dialog_input_gas.xml
@@ -91,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_cancel"
-        android:textColor="@color/wallet_blue_text"
+        android:textColor="@color/wallet_main_yellow_color"
         android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wallet_confirm"
-        android:textColor="@color/wallet_blue_text"
+        android:textColor="@color/wallet_main_yellow_color"
         android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/line2"
