--- a/app/src/main/res/layout/wallet_partition_item.xml
+++ b/app/src/main/res/layout/wallet_partition_item.xml
@@ -29,7 +29,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginRight="12dp"
         android:minWidth="30dp"
-        android:textColor="@color/wallet_blue_text"
+        android:textColor="@color/wallet_main_yellow_color"
         android:textSize="16sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/name"
