--- a/app/src/main/res/layout/wallet_popup_window_add_wallet.xml
+++ b/app/src/main/res/layout/wallet_popup_window_add_wallet.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/wallet_create"
-        android:textColor="@color/wallet_blue"
+        android:textColor="@color/wallet_main_yellow_color"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/wallet_import"
-        android:textColor="@color/wallet_blue"
+        android:textColor="@color/wallet_main_yellow_color"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
