--- a/app/src/main/res/layout/wallet_show_message_dialog_view.xml
+++ b/app/src/main/res/layout/wallet_show_message_dialog_view.xml
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/wallet_confirm"
-        android:textColor="@color/wallet_blue_text"
+        android:textColor="@color/wallet_main_yellow_color"
         android:textSize="16sp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
