--- a/app/src/main/res/layout/wallet_token_item.xml
+++ b/app/src/main/res/layout/wallet_token_item.xml
@@ -47,6 +47,7 @@
         android:id="@+id/value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="@dimen/dp_40"
         android:layout_marginTop="@dimen/dp_14"
         android:layout_marginRight="@dimen/dp_16"
         android:text="519.19"
